Added 'reciprocal' argument to Scan.view. Performs FFT

--- a/pint/Pint-Examples.ipynb
+++ b/pint/Pint-Examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,11 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -37,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +102,7 @@
        "5.005 meter"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,6 +112,81 @@
     "d2 = 5 * ureg.millimeter\n",
     "\n",
     "d1+d2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Getting reciprocal units"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "1/meter"
+      ],
+      "text/latex": [
+       "$\\frac{1}{\\mathrm{meter}}$"
+      ],
+      "text/plain": [
+       "1/meter"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "invd1 = 1/ d1\n",
+    "invd1.units"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "FFT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "1/meter"
+      ],
+      "text/latex": [
+       "$\\frac{1}{\\mathrm{meter}}$"
+      ],
+      "text/plain": [
+       "1/meter"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 2*np.pi*np.linspace(-1,1, num=100)\n",
+    "y = ( np.sin(x) + np.sin(20*x) + np.sin(30*x) )* ureg.meter\n",
+    "\n",
+    "yfft = np.fft.fft(y.magnitude).real * (1 / y).units\n",
+    "\n",
+    "yfft.units\n",
+    "\n",
+    "#invx = (1 / x)\n",
+    "#plt.plot(invx, yfft);"
    ]
   },
   {
@@ -127,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
